# ru-gpts

./: README.md  deepspeed_config.json  pyproject.toml  run.py
src/: download_utils.py  utils.py  xl_wrapper.py
src/mpu/: grads.py  initialize.py  layers.py  mappings.py  transformer.py
