[project]
name = "ru-gpts"
version = "0.1.0"
description = ""
authors = [
    {name = "valentino-sm",email = "5059499+valentino-sm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed (>=0.16.3,<0.17.0)",
    "transformers (>=4.48.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
